--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@cap-js/sqlite": "^1",
     "@sap/cds": "^8",
     "express": "^4",
-    "git": "^0.1.5"
+    "git": "^0.1.5",
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.6",
@@ -22,7 +23,10 @@
   "cds": {
     "requires": {
       "db": {
-        "kind": "sql"
+        "kind": "sql",
+        "model": [
+          "db/schema"
+        ]
       }
     }
   },
